# remora

./: .gitignore  .tmuxp.yaml  AGENTS.md  README.md  devenv.nix  devenv.yaml  pyproject.toml  remora.yaml  remora.yaml.example  ruff.toml
.context/cairn/extensions/cairn-git/: pyproject.toml
.context/cairn/extensions/cairn-llm/: pyproject.toml
.context/cairn/extensions/cairn-registry/: pyproject.toml
.context/embeddy/: README.md  SPEC.md  pyproject.toml
.context/embeddy/docs/: ARCHITECTURE.md  DEV_GUIDE.md  INTEGRATION.md  USER_GUIDE.md
.context/embeddy/examples/wikipedia/: README.md  __init__.py  benchmark.py  download.py  ingest.py  search.py
.context/embeddy/src/embeddy/: __init__.py  config.py  exceptions.py  models.py
.context/embeddy/src/embeddy/chunking/: __init__.py  base.py  docling_chunker.py  markdown_chunker.py  paragraph_chunker.py  python_chunker.py  token_window_chunker.py
.context/embeddy/src/embeddy/cli/: __init__.py  main.py
.context/embeddy/src/embeddy/client/: __init__.py  client.py
.context/embeddy/src/embeddy/embedding/: __init__.py  backend.py  embedder.py
.context/embeddy/src/embeddy/ingest/: __init__.py  ingestor.py
.context/embeddy/src/embeddy/pipeline/: __init__.py  pipeline.py
.context/embeddy/src/embeddy/search/: __init__.py  search_service.py
.context/embeddy/src/embeddy/server/: __init__.py  app.py  schemas.py
.context/embeddy/src/embeddy/server/routes/: chunks.py  (+5 more)
.context/embeddy/src/embeddy/store/: __init__.py  vector_store.py
.context/grail_v3.0.0/: ARCHITECTURE.md  GRAIL_CONCEPT.md  HOW_TO_USE_GRAIL.md  README.md  SPEC.md  pyproject.toml
.context/grail_v3.0.0/examples/expense_analysis/: analysis.pym  data.py  host.py
.context/grail_v3.0.0/src/grail/: __init__.py  __main__.py  _external.py  _input.py  _types.py  _types_stubs.pyi  artifacts.py  checker.py  cli.py  codegen.py  errors.py  limits.py  parser.py  script.py  stubs.py
.context/grail_v3.0.0/tests/fixtures/: invalid_class.pym  invalid_generator.pym  invalid_with.pym  missing_annotation.pym  non_ellipsis_body.pym  simple.pym  test_fixtures.py  with_multiple_externals.pym
.context/grail_v3.0.0/tests/integration/: conftest.py  test_artifacts_2.py  test_artifacts_verify.py  test_end_to_end.py  test_error_quality.py  test_monty_integration.py
.context/grail_v3.0.0/tests/unit/: test_artifacts.py  test_checker.py  test_cli.py  test_codegen.py  test_declarations.py  test_errors.py  test_limits.py  test_logging.py  test_parser.py  test_public_api.py  test_script.py  test_stubs.py  test_types.py  test_v3_refactor.py
.context/structured-agents_v0.4.0/: AGENTS.md  ARCHITECTURE.md  HOW_TO_USE_STRUCTURED_AGENTS.md  README.md  pyproject.toml
.context/structured-agents_v0.4.0/agents/add_numbers/: check.json  stubs.pyi
.context/structured-agents_v0.4.0/agents/code_helper/: generate_docstring.pym  summarize_code.pym
.context/structured-agents_v0.4.0/agents/code_helper/generate_docstring/: check.json  inputs.json  monty_code.py  stubs.pyi
.context/structured-agents_v0.4.0/agents/code_helper/summarize_code/: check.json  inputs.json  monty_code.py  stubs.pyi
.context/structured-agents_v0.4.0/agents/context_info/: check.json  inputs.json  monty_code.py  stubs.pyi
.context/structured-agents_v0.4.0/agents/echo/: check.json  inputs.json  monty_code.py  stubs.pyi
.context/structured-agents_v0.4.0/agents/find/: check.json  inputs.json  monty_code.py  stubs.pyi
.context/structured-agents_v0.4.0/agents/ls/: check.json  inputs.json  monty_code.py  stubs.pyi
.context/structured-agents_v0.4.0/agents/mkdir/: check.json  inputs.json  monty_code.py  stubs.pyi
.context/structured-agents_v0.4.0/agents/pwd/: check.json  monty_code.py  stubs.pyi
.context/structured-agents_v0.4.0/agents/shellper_demo/: cat.pym  cd.pym  cp.pym  diff.pym  du.pym  echo.pym  find.pym  grep.pym  ls.pym  mkdir.pym  mv.pym  pwd.pym  rm.pym  rmdir.pym  sort.pym  tail.pym  touch.pym  wc.pym
.context/structured-agents_v0.4.0/agents/sort/: check.json  inputs.json  monty_code.py  stubs.pyi
.context/structured-agents_v0.4.0/agents/wc/: check.json  inputs.json  monty_code.py  stubs.pyi
.context/structured-agents_v0.4.0/demo/: demo_v04.py
.context/structured-agents_v0.4.0/demo/agents/workspace_agent/: add_entry.pym  bundle.yaml  format_summary.pym  list_entries.pym  submit_result.pym  summarize_state.pym  update_entry.pym  workspace_context.pym
.context/structured-agents_v0.4.0/demo/ultimate_demo/: README.md  __init__.py  config.py  coordinator.py  observer.py  runner.py  state.py  subagents.py  tools.py
.context/structured-agents_v0.4.0/demo_tools/: add.pym  multiply.pym  truncate.pym
.context/structured-agents_v0.4.0/docs/plans/: 2026-02-26-readme-cleanup.md
.context/structured-agents_v0.4.0/src/structured_agents/: __init__.py  exceptions.py  kernel.py  types.py
.context/structured-agents_v0.4.0/src/structured_agents/client/: __init__.py  litellm_client.py  openai.py  protocol.py
.context/structured-agents_v0.4.0/src/structured_agents/events/: __init__.py  observer.py  types.py
.context/structured-agents_v0.4.0/src/structured_agents/grammar/: __init__.py  config.py  models.py  pipeline.py
.context/structured-agents_v0.4.0/src/structured_agents/models/: __init__.py
.context/structured-agents_v0.4.0/src/structured_agents/parsing/: __init__.py  parsers.py
.context/structured-agents_v0.4.0/tests/: conftest.py  test_public_api.py  test_types.py
.context/structured-agents_v0.4.0/tests/test_client/: test_factory.py  test_openai.py
.context/structured-agents_v0.4.0/tests/test_events/: test_observer.py
.context/structured-agents_v0.4.0/tests/test_grammar/: test_pipeline.py
.context/structured-agents_v0.4.0/tests/test_integration/: test_e2e_kernel.py  test_full_agent.py
.context/structured-agents_v0.4.0/tests/test_kernel/: test_basic.py  test_kernel_comprehensive.py
.context/structured-agents_v0.4.0/tests/test_parsing/: test_parsers.py
.context/structured-agents_v0.4.0/tests/test_property/: test_events_property.py  test_parsing_property.py  test_types_property.py
(+320 files in other folders)
