[project]
name = "embeddy"
version = "0.3.12"
description = "Async-native multimodal embedding, chunking, hybrid search, and RAG pipeline library."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" },
]

dependencies = [
  "pydantic>=2.0",
  "numpy>=1.24",
  "transformers>=4.57.0",
  "torch>=2.8.0",
  "qwen-vl-utils>=0.0.14",
  "sqlite-vec>=0.1",
  "docling>=2.0",
  "docling-core>=2.0",
  "aiofiles>=24.0",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]
cli = [
  "typer>=0.12",
]
bench = [
  "pytest-benchmark>=4.0",
  "psutil>=5.9",
  "pynvml>=11.5",
]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "httpx>=0.27",
  "mypy>=1.10",
  "ruff>=0.5.0",
  "pyyaml>=6.0",
]
all = [
  "embeddy[server,cli,bench,dev]",
]

[project.scripts]
embeddy = "embeddy.cli.main:app"

#[project.urls]
#homepage = "https://example.com/embeddy"
#repository = "https://example.com/embeddy.git"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embeddy"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
  "SPEC.md",
  "docs",
  "tests",
  "pyproject.toml",
]

[tool.uv]
# Keep the default behavior; this section is here so you can extend it later if needed.

[tool.pytest.ini_options]
addopts = "-q --cov=embeddy --cov-report=term-missing"
testpaths = ["tests", "benchmarks"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
packages = ["src/embeddy"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
no_implicit_optional = true

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
