[project]
name = "cairn-llm"
version = "0.1.0"
description = "LLM code provider plugin for Cairn"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Bullish Design" }]
dependencies = ["cairn"]

[project.entry-points."cairn.providers"]
llm = "cairn_llm.provider:LLMCodeProvider"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
