[project]
name = "cairn-registry"
version = "0.1.0"
description = "Registry code provider plugin for Cairn"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Bullish Design" }]
dependencies = ["cairn"]

[project.entry-points."cairn.providers"]
registry = "cairn_registry.provider:RegistryCodeProvider"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
